# TinY-ANN

./: CMakeLists.txt  README.md  debugmalloc.c  debugmalloc.h  example_check.c  example_chess.c  example_circle.c  example_linear.c  example_spiral.c  example_titanic.c  example_wine.c  perceptron.c  perceptron.h  perceptron_libs.c  perceptron_plotter.c  usage.c
data/: titanic_data.csv  wine_data.csv
example_code/: example_code.cbp  example_code.depend  example_code.layout  main.c  perceptron.c  perceptron.h
